<resources>


    <string name="app_name">Inventory Manager</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_header_desc">Navigation header</string>


    <string name="buildingTitle">Locations</string>
    <string name="up_stock">Update Item</string>
    <string name="img_ch">Change Image</string>
    <string name="loc_ch">Change Location</string>
    <string name="up_loc">Update Location</string>
    <string name="no_list">Create Location</string>
    <string name="loc_name">Enter the Location Name</string>
    <string name="loc_address">Enter the Location Address</string>
    <string name="loc_phone">Enter the Location Phone Number</string>
    <string name="loc_img">Select a Location Image</string>
    <string name="loc_none">Select a Location</string>
    <string name="b_update">Location Updated</string>
    <string name="b_create">Location Created</string>
    <string name="b_setLoc">Location Set</string>
    <string name="button_addBuilding">Update Location</string>
    <string name="hint_buildingName">Location Name</string>
    <string name="hint_buildingAddress">Location Address</string>
    <string name="hint_buildingPhone">Location Phone Number</string>
    <string name="menu_addBuilding">Add</string>
    <string name="menu_building_new">New</string>
    <string name="menu_confirm">Confirm</string>
    <string name="enter_building_name">Enter the Location Name</string>
    <string name="save_building">Save Branch</string>
    <string name="button_addImage">Add Image</string>
    <string name="select_building_image">Select Branch Image</string>
    <string name="change_building_image">Change Image</string>
    <string name="b_name_chars">Name: 15 characters maximum</string>
    <string name="b_address_chars">Address: 25 characters maximum</string>
    <string name="b_phone_chars">Phone: 15 characters maximum</string>
    <string name="fragment_building">Locations</string>
    <string name="building_image">Branch Image</string>
    <string name="button_location">Find Location</string>
    <string name="button_ch_location">Change Location</string>
    <string name="action_location">Locations</string>
    <string name="menu_deleteBuilding">Delete</string>
    <string name="img_choose">Choose Image</string>
    <string name="max_quant">Max Quantity</string>
    <string name="fav">Favourite</string>

    <string name="hint_hiring">Currently Hiring: </string>
    <string name="s_noList">Create Item</string>
    <string name="stock_add_img">Image</string>
    <string name="stock_add_item">Add Item</string>
    <string name="s_update">Item Updated</string>
    <string name="i_update">Update Item</string>
    <string name="s_create">Item Created</string>
    <string name="s_price">Enter the Item Value</string>
    <string name="s_weight">Enter the Item Weight</string>
    <string name="s_name">Enter the Item Name</string>
    <string name="s_name_chars">20 Chars Maximum</string>
    <string name="s_quantity">Enter the Item Quantity</string>
    <string name="stock_img">Select a Stock Image</string>
    <string name="fragment_stock">Stock</string>
    <string name="search_stock">Search Stock</string>
    <string name="in_stock">In Stock</string>
    <string name="quantity_colon">Quantity: </string>
    <string name="price_icon">Price: €</string>
    <string name="weight_colon">Weight: </string>
    <string name="minus_desc">Remove from quantity</string>
    <string name="plus_desc">Add to quantity</string>
    <string name="button_addStock">Add Item</string>
    <string name="hint_stockName">Item Name</string>
    <string name="hint_stockBranch">Branch Name</string>
    <string name="hint_stockDept">Department</string>
    <string name="action_stock">Stock</string>
    <string name="hint_stockWeight">Item Weight</string>
    <string name="hint_stockQuantity">Item Quantity</string>
    <string name="hint_stockPrice">Item Price</string>
    <string name="select_stock_image">Select Image</string>
    <string name="change_stock_image">Change Image</string>
    <string name="stock_image">Item Image</string>
    <string name="menu_addStock">Add Item</string>
    <string name="menu_cancelStock">Cancel</string>
    <string name="enter_stock_name">Enter the Item Name</string>
    <string name="quantity_warn">Quantity already at the minimum level</string>
    <string name="save_stock">Save</string>
    <string name="button_addStockImage">Add Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="nav_header_title">Inventory Manager</string>
    <string name="nav_header_subtitle">bc@android.com</string>
    <string name="messageLoading">Buildings Loading...</string>
    <string name="select_profile_image">Select Profile Image</string>


    <string name="hint_lat">Latitude</string>
    <string name="hint_lng">Longitude</string>
    <string name="hint_staffQuantity">Number of Staff</string>
    <string name="hint_town">Village / Town</string>

    <string name="warn_name">Enter the Branch Name </string>
    <string name="warn_phone">Enter the Branch Phone Number </string>
    <string name="warn_town">Enter the Town Name</string>
    <string name="warn_county">Select the County</string>
    <string name="warn_staff">Select the Number of Staff</string>

    <string name="warn_name_len">Name: Max 15 Characters </string>
    <string name="warn_phone_len">Phone: Max 10 Characters </string>

    <string name="fave">Favourite</string>
    <string name="faves">Favourites</string>
    <string name="faved">Favourited</string>
    <string name="co">Co.</string>
    <string name="hiring">Hiring:</string>
    <string name="staff">Staff:</string>
    <string name="stock_value">Stock Value: </string>
    <string name="stock_lvl">Max Stock Level must be more than 0 </string>
    <string name="stock_lvlmax">Max Stock must be less than the current level </string>
    <string name="search">Search</string>

    <string name="nav_loc">Locations</string>
    <string name="all_loc">All Locations</string>

    <string name="instock">In Stock:</string>
    <string name="wweight">Weight:</string>

    <string name="iname">Enter the Item Name</string>
    <string name="charsmax">15 Characters Max</string>
    <string name="iweight">Enter the Item Weight</string>
    <string name="noweight">Invalid Weight</string>
    <string name="iunit">Select a Unit Type</string>
    <string name="iprice">Enter the Item Price</string>
    <string name="eu">€</string>
    <string name="noprice">Invalid Price</string>
    <string name="imax">Select a Maximum Amount</string>
    <string name="charsmin">Minimum Stock Level 0</string>
    <string name="invlogin">Inventory Manager Login</string>


    <string-array name="counties">
        <item>Carlow</item>
        <item>Cavan</item>
        <item>Clare</item>
        <item>Cork</item>
        <item>Donegal</item>
        <item>Dublin</item>
        <item>Galway</item>
        <item>Kerry</item>
        <item>Kildare</item>
        <item>Kilkenny</item>
        <item>Laois</item>
        <item>Leitrim</item>
        <item>Limerick</item>
        <item>Longford</item>
        <item>Louth</item>
        <item>Mayo</item>
        <item>Meath</item>
        <item>Monaghan</item>
        <item>Offaly</item>
        <item>Roscommon</item>
        <item>Sligo</item>
        <item>Tipperary</item>
        <item>Waterford</item>
        <item>Westmeath</item>
        <item>Wexford</item>
        <item>Wicklow</item>
    </string-array>

    <string-array name="units">
        <item>mg</item>
        <item>g</item>
        <item>kg</item>
        <item>oz</item>
        <item>lb</item>
        <item>gal</item>
        <item>ml</item>
        <item>lt</item>
    </string-array>
</resources>
