<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E1E3E1E1"
        android:padding="16dp">

        <TextView
            android:id="@+id/stockListQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListPrice"
            android:layout_marginStart="15dp"
            android:layout_marginTop="21dp"
            android:layout_toEndOf="@+id/textViewWeight"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListPrice"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:layout_toEndOf="@+id/stockImageIcon"
            android:text="@string/quantity_colon"
            android:textColor="@color/dark"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/stockImageIcon"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/building_image" />

        <TextView
            android:id="@+id/stockListName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/stockImageIcon"
            android:textColor="@color/orange"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/stockListWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListPrice"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_toEndOf="@+id/textViewWeight"
            android:textColor="@color/orange"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textViewWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListPrice"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_toEndOf="@+id/stockImageIcon"
            android:text="@string/weight_colon"
            android:textColor="@color/dark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stockListPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/textViewPrice"
            android:textColor="@color/orange"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stockListName"
            android:layout_marginStart="0dp"
            android:layout_marginTop="11dp"
            android:layout_toEndOf="@+id/stockImageIcon"
            android:text="@string/price_icon"
            android:textColor="@color/dark"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="317dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/plus_desc"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_add"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/minus"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="317dp"
            android:layout_marginTop="54dp"
            android:layout_marginEnd="21dp"
            android:contentDescription="@string/minus_desc"
            android:minHeight="48dp"
            app:srcCompat="@drawable/ic_remove"
            tools:ignore="TouchTargetSizeCheck" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>