<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="building"
            type="org.wit.inventorymanager.models.BuildingModel" />
    </data>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:elevation="24dp">

    <RelativeLayout
        android:layout_width="365dp"
        android:layout_height="match_parent"
        android:background="#E1E3E1E1"
        android:padding="16dp">

        <ToggleButton
            android:id="@+id/fave"
            android:layout_width="111dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="219dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:checked="@{building.faved}"
            android:textOff="@string/fave"
            android:textOn="@string/faved"
            android:textSize="8sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="0dp"
            android:text="@{building.name}"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="130dp"
            android:layout_height="1dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:background="@color/orange" />

        <TextView
            android:id="@+id/hiring"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="257dp"
            android:text="@string/hiring"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/hiretext"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="55dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="200dp"
            android:text="@{Boolean.toString(building.faved)}"
            android:textSize="12sp" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>
</layout>