<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autofillHints="County"
        tools:context="org.wit.inventorymanager.ui.stock.StockFragment">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="285dp"
            android:layout_height="61dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="15dp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="3dp"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/orange"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.17000002">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stockName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_stockName"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="183dp"
            android:layout_height="68dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="15dp"
            android:textSize="14sp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="3dp"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/orange"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.31">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editWeight"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:hint="@string/hint_stockWeight"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="285dp"
            android:layout_height="61dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="15dp"
            android:textSize="14sp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="3dp"
            app:endIconDrawable="@drawable/ic_baseline_close_24"
            app:endIconMode="clear_text"
            app:endIconTint="@color/orange"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_stockPrice"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="117dp"
            android:layout_height="71dp"
            app:boxStrokeColor="@color/orange"
            app:boxStrokeWidth="3dp"
            app:endIconTint="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.87"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3">

            <AutoCompleteTextView
                android:id="@+id/unit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:hint="Unit"
                android:inputType="none"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/quant2"
            android:layout_width="70dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:text="@string/in_stock"
            android:textColor="@color/dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stockQuantity2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655" />

        <NumberPicker
            android:id="@+id/stockQuantity2"
            android:layout_width="46dp"
            android:layout_height="103dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:outlineAmbientShadowColor="@color/color_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.679" />

        <Switch
            android:id="@+id/sfave"
            android:layout_width="170dp"
            android:layout_height="24dp"
            android:text="@string/fav"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.066"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.82" />

        <TextView
            android:id="@+id/max"
            android:layout_width="108dp"
            android:layout_height="22dp"
            android:layout_marginStart="16dp"
            android:text="@string/max_quant"
            android:textColor="@color/dark"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stockQuantity"
            app:layout_constraintHorizontal_bias="0.18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.655" />

        <NumberPicker
            android:id="@+id/stockQuantity"
            android:layout_width="46dp"
            android:layout_height="103dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:outlineAmbientShadowColor="@color/color_secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.679" />

        <Button
            android:id="@+id/stockAdd"
            android:layout_width="170dp"
            android:layout_height="48dp"
            android:background="@color/d_grey"
            android:stateListAnimator="@null"
            android:text="@string/stock_add_item"
            android:textColor="@color/orange"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.065"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.928" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>